--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,9 @@
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
 
+    <string-array name="spinner_decklist_option">
+        <item>All Decks</item>
+        <item>My Custom Deck</item>
+    </string-array>
+
 </resources>
